[tool.poetry]
name = "blaise-data-delivery-alerts"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <srbry@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", rev = "main"}
pytz = "^2021.1"
termcolor = "^1.1.0"
slack-sdk = "^3.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
flake8 = "^3.9.1"
pytest = "^6.2.3"
black = "^20.8b1"
freezegun = "^1.1.0"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
