[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", tag = "v1.0.1"}
pytz = "^2025.2"
termcolor = "^3.1.0"
slack-sdk = "^3.36.0"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"
black = "^25.1.0"
freezegun = "^1.5.5"
mypy = "^1.17.1"
types-pytz = "^2025.2.0.20250809"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
